--- a/style.css
+++ b/style.css
@@ -237,6 +237,12 @@ li{
     scale: 1.02;
 }
 
+
+.this:hover .work-def h4{
+    transform: translateX(10px);
+    color: white;
+}
+
 .work-img{
     width: 100%;
     height: 60%;
@@ -257,6 +263,7 @@ li{
 .work-def h4{
     margin: 0;
     font-size: 27px;
+    transition: all 0.5s;
 }
 
 .end{
@@ -352,7 +359,7 @@ footer .top, footer .bot{
 }
 
 footer .bot{
-    margin-top: 140px;
+    margin-top: 130px;
 }
 
 .bot span{
